--- a/custom_components/alarme_personnalisee/manifest.json
+++ b/custom_components/alarme_personnalisee/manifest.json
@@ -1,14 +1,14 @@
 {
   "domain": "alarme_personnalisee",
   "name": "Alarme Personnalisée",
-  "version": "1.0.0",
-  "documentation": "https://github.com/user/repo",
-  "issue_tracker": "https://github.com/user/repo/issues",
-  "codeowners": [],
+  "version": "1.1.0",
+  "documentation": "https://github.com/Turiko313/Alarme-home-assistant-",
+  "issue_tracker": "https://github.com/Turiko313/Alarme-home-assistant-/issues",
+  "codeowners": ["@Turiko313"],
   "config_flow": true,
   "integration_type": "hub",
   "iot_class": "calculated",
-  "homeassistant": "2022.11.0",
+  "homeassistant": "2024.1.0",
   "requirements": [],
   "dependencies": ["frontend"]
 }
