--- a/custom_components/alarme_personnalisee/manifest.json
+++ b/custom_components/alarme_personnalisee/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "alarme_personnalisee",
   "name": "Alarme Personnalisée",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "documentation": "https://github.com/Turiko313/Alarme-home-assistant-",
   "issue_tracker": "https://github.com/Turiko313/Alarme-home-assistant-/issues",
   "codeowners": ["@Turiko313"],
@@ -10,5 +10,5 @@
   "iot_class": "calculated",
   "homeassistant": "2024.1.0",
   "requirements": [],
-  "dependencies": ["frontend"]
+  "dependencies": []
 }
